[tool.poetry]
name = "example-auth-server-test"
version = "1.0.0"
description = "Auth server test"
authors = ["Andreas Backström <mozzo242@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.0.0"
python-dotenv = "1.0.0"
Flask-JWT-Extended = "4.6.0"
flask-cors = "4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"